[gd_scene load_steps=4 format=3 uid="uid://c0dxhlxh166sm"]

[ext_resource type="Texture2D" uid="uid://biyy5yoalmqda" path="res://Textures/UI/Green Egg.png" id="1_bi3kq"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_f6jox"]
[ext_resource type="Theme" uid="uid://pvt45myq3ovh" path="res://Scenes/UI/Dino Theme.tres" id="1_tvoda"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f6jox")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tvoda")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Left" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Left"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Left/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Left/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_bi3kq")
expand_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/Left/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x2"

[node name="Center" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Center"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/Center/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2:30"

[node name="Right" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Right"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/Right/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"
